<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.uk.uddr.activity.HomeActivity">

    <FrameLayout
        android:layout_above="@id/btn_viewbasket"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />

    <com.uk.uddr.utils.CButtonBold
        android:id="@+id/btn_viewbasket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="View Basket"
        android:textAlignment="center"
        android:layout_above="@+id/card_view"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        android:drawableRight="@drawable/ic_close_black_24dp"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:layout_marginBottom="4dp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/white"
        android:elevation="8dp"
        android:id="@+id/card_view"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/green"
             >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/len_home"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <com.uk.uddr.utils.CTextBold
                    android:id="@+id/txt_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="13sp"
                    android:textColor="@color/dark_grey"
                    android:text="@string/home"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/len_search"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/img_search"/>

                <com.uk.uddr.utils.CTextBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="13sp"
                    android:id="@+id/txt_search"
                    android:textColor="@color/dark_grey"
                    android:text="@string/search"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/len_order"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/img_order"/>

                <com.uk.uddr.utils.CTextBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="13sp"
                    android:id="@+id/txt_order"
                    android:textColor="@color/dark_grey"
                    android:text="@string/my_orders"/>
            </LinearLayout>

            <!--<RelativeLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="center"-->
                <!--android:id="@+id/len_cart"-->
                <!--android:orientation="vertical">-->

                <!--<ImageView-->
                    <!--android:layout_width="30dp"-->
                    <!--android:id="@+id/img_cart"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_height="30dp"/>-->

                <!--<com.uk.uddr.utils.CTextBold-->
                    <!--android:layout_width="25dp"-->
                    <!--android:layout_height="25dp"-->
                    <!--android:gravity="center"-->
                    <!--android:textSize="15sp"-->
                    <!--android:visibility="gone"-->
                    <!--android:padding="3dp"-->
                    <!--android:elevation="8dp"-->
                    <!--android:id="@+id/txt_cartcount"-->
                    <!--android:background="@drawable/text_bg"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:layout_marginRight="20dp"-->
                    <!--android:layout_alignParentRight="true"/>-->

                <!--<com.uk.uddr.utils.CTextBold-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="4dp"-->
                    <!--android:textSize="13sp"-->
                    <!--android:layout_below="@+id/img_cart"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:id="@+id/txt_cart"-->
                    <!--android:textColor="@color/dark_grey"-->
                    <!--android:text="@string/cart"/>-->
            <!--</RelativeLayout>-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/len_profile"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:id="@+id/img_profile"
                    android:layout_height="30dp"/>

                <com.uk.uddr.utils.CTextBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="13sp"
                    android:id="@+id/txt_profile"
                    android:textColor="@color/dark_grey"
                    android:text="@string/profile"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>